2004-01-09  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-file-print.c

	Compilation fixes

2004-01-08  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-xpath-expression.c, cong-dispspec-element.c

	Added #include <libxml/xpath.h> to fix bug #130820; fixed ChangeLog entries to be 2004 - wake up Dave :-)

2004-01-08  Paul Smith <conglomerate@pcs.uklinux.net>

	* cong-document.c, cong-document.h, cong-menus.c, cong-primary-window.c, popup.c

	Links Paste sensitivity to cong_document_can_paste.  Currently always returns true (therefore button is always sensitive)
	This work on #126089

2004-01-08  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-edit-find-and-replace.c

	Find functionality now traverses the tree properly; created a CongFileParameters struct in case we decide to add funkier searches

	* cong-node.h, cong-node.c, cong-location.c

	Cleaned up node searching functions into a public API; fixed various comments to keep gtk-doc happy

	* cong-edit-find-and-replace.c

	Initial primitive implementation of Find functionality

	* cong-menus.c

	Hook up find/replace functionality into menus

	* cong-edit-find-and-replace.c, cong-edit-find-and-replace.h, Makefile.am

	New files

	* cong-file-properties.c, cong-util.c, cong-util.h

	Moved cong_util_load_glade_file into correct file; fixed comments
	
	* cong-menus.c

	Updated year of copyright in About dialog

2004-01-07  David Malcolm <david@davemalcolm.demon.co.uk>

	--- Version 0.7.10 ---

	* cong-editor-area-flow-holder-blocks.c

	Fix for bug #130724 (crash on loading examples/test-docbook.c)

	* cong-editor-node.c

	Fixed copy & paste typo in cong_editor_node_get_next

	* cong-overview-view.c, cong-tree-view.c, cong-tree-view.h

	Update root of Overview tree when URL changes, fixing bug #130728

2004-01-06  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-document.c, cong-document.h, cong-file-properties.c
